--- a/Oevelse_1/parts/makefile
+++ b/Oevelse_1/parts/makefile
@@ -2,6 +2,11 @@ SOURCES :=${wildcard *.cpp}
 OBJECTS :=${patsubst %.cpp,%.o, ${SOURCES}}
 EXECUTABLE=main
 CXX=g++
+format: $(SOURCES:.cpp=.format)
+%.format: %.cpp
+	@echo "Formatting file '$<'"...
+	@clang-format -i $<
+	@echo "" > $@
 
 ${EXECUTABLE}: main.o part1.o part2.o
 	${CXX} -o ${EXECUTABLE} ${OBJECTS}
